 - Fix up compiler warnings (Jens Rehsack) (github 211)
 - Test against 5.28.0, 5.29.0 and some other versions
 - Compress and then delete old cpancover data
 - Clarify some docs around ignore (Olaf Alders) (github 207)
 - Run coverage on cpp and hpp files (Jacques Germishuys) (github 203)
 - Add docs for coverage of modules on command line (Slaven Rezić) (github 204)

Release 1.29 - 15 October 2017
 - Lock using read and append mode (Stephan Loyd) (github 196)
 - Clean up lock files when running cover command

Release 1.28 - 5 October 2017
 - Fix typo in docs (Gregor Herrmann) (github 195)
 - Fix up options to cover program (github 194)

Release 1.27 - 20 September 2017
 - Test against 5.27.3
 - Add dependency on B::Debug (Ryan Voots) (github 189)
 - Remove obsolete dev and cpancover code
 - Manage multiple ignore and select options (Sullivan Beck) (github 163)
 - Write top-level html last for better sorting (Christian Walde) (github 158)
 - Restore XS coverage in cpancover (H.Merijn Brand) (github 188)
 - Allow cpancover to run fully from local directory
 - Handle missing start times in runs (Chad Granum) (github 190)
 - Add test for string eval (Sebastian Paaske Tørholm) (github 145)
 - Improve uncoverable tests and docs (Kevin Brannen) (github 167)
 - The cover program accepts multiple reports (Eden Hochbaum) (github 172)
 - Add -prefer_lib option to cover script (Kent Fredric) (github 91)
 - Fix low-level file locking (Graham Knop) (github 90)

Release 1.26 - 24 July 2017
 - Untaint $DEVEL_COVER_OPTIONS (Alexey Sokolov) (github 187)
 - Add loose_perms option (Todd Rinaldo) (github 185)
 - Set EXTENDED_TESTING during cpancover runs
 - Improve version parsing for cpancover (Helmut Wollmersdorfer) (github 124)
 - Improve cpancover code and documentation

Release 1.25 - 11 May 2017
 - Fix C code to work with MSVC (Marc-Philip) (github 177)
 - Fix cover command using Module::Build on Win32 (sago35) (github 160)